function(rvsim_test_draw target testname)
    add_executable(${target} ${testname})
    target_link_libraries(${target} rvgsim gtest gtest_main)
    target_include_directories(${target} PRIVATE ${project_top_path}/src)
    target_include_directories(${target} PRIVATE ${project_top_path}/test/draw)
    target_include_directories(${target} PRIVATE ${PROJECT_BINARY_DIR}/src)
    add_test(NAME ${target} COMMAND ${target})
endfunction()

add_subdirectory(basic)
add_subdirectory(games101)