function(rvsim_ut_alu testname)
    set(testcase rvsim_ut_alu_${testname})
    add_executable(${testcase} ut_${testname}.cpp)
    target_link_libraries(${testcase} rvgsim gtest gtest_main)
    target_include_directories(${testcase} PRIVATE ${project_top_path}/src)
    add_test(NAME ${testcase} COMMAND ${testcase})
endfunction()

rvsim_ut_alu(add)
rvsim_ut_alu(addi)
rvsim_ut_alu(addiw)
rvsim_ut_alu(addw)
rvsim_ut_alu(lui)
rvsim_ut_alu(mul)
rvsim_ut_alu(mulw)
rvsim_ut_alu(slliw)
rvsim_ut_alu(slli)
rvsim_ut_alu(slt)
rvsim_ut_alu(sltu)
rvsim_ut_alu(andi)
rvsim_ut_alu(ori)
rvsim_ut_alu(xori)
rvsim_ut_alu(or)
