function(rvsim_ut_branch testname)
    set(testcase rvsim_ut_branch_${testname})
    add_executable(${testcase} ut_${testname}.cpp)
    target_link_libraries(${testcase} rvgsim gtest gtest_main)
    target_include_directories(${testcase} PRIVATE ${project_top_path}/src)
    target_include_directories(${testcase} PRIVATE ${project_top_path}/test/unit)
    target_include_directories(${testcase} PRIVATE ${PROJECT_BINARY_DIR}/src)
    add_test(NAME ${testcase} COMMAND ${testcase})
endfunction()

rvsim_ut_branch(auipc)
rvsim_ut_branch(beq)
rvsim_ut_branch(bge)
rvsim_ut_branch(bgeu)
rvsim_ut_branch(bltu)
rvsim_ut_branch(bne)
rvsim_ut_branch(jal)
rvsim_ut_branch(jalr)
