function(rvsim_ut_fpu testname)
    set(testcase rvsim_ut_fpu_${testname})
    add_executable(${testcase} ut_${testname}.cpp)
    target_link_libraries(${testcase} rvgsim gtest gtest_main)
    target_include_directories(${testcase} PRIVATE ${project_top_path}/src)
    target_include_directories(${testcase} PRIVATE ${project_top_path}/test/unit)
    target_include_directories(${testcase} PRIVATE ${PROJECT_BINARY_DIR}/src)
    add_test(NAME ${testcase} COMMAND ${testcase})
endfunction()

rvsim_ut_fpu(fadd_s)
rvsim_ut_fpu(fdiv_s)
rvsim_ut_fpu(fmadd_s)
rvsim_ut_fpu(fmul_s)
rvsim_ut_fpu(fmsub_s)
rvsim_ut_fpu(fsub_s)
rvsim_ut_fpu(fcvt_s_wu)
rvsim_ut_fpu(fcvt_lu_s)
rvsim_ut_fpu(fle_s)
rvsim_ut_fpu(fmv_w_x)